--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "axios": "^1.7.4",
     "classnames": "^2.5.1",
     "formik": "^2.4.6",
@@ -19,6 +20,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
+    "react-toastify": "^10.0.5",
     "sweetalert2": "^11.12.4",
     "vcf": "^2.1.2",
     "yup": "^1.4.0"
